Fixing the Project toggle section & adding extra space between bullet points

--- a/src/Modal.css
+++ b/src/Modal.css
@@ -7,3 +7,7 @@
   color: #ffffff;
   /* text-align: center; */
 }
+
+.modalContent ul li{
+  margin-bottom: 4px;
+}
